# memeroute

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  Justfile  Makefile  TODO.md
memeroute-gui/: Cargo.toml
memeroute-gui/src/: gui.rs  lib.rs  main.rs  wasm.rs
memeroute-gui/src/pcb/: mod.rs  pcb_view.rs  primitives.rs
scripts/: dsn.py
src/: lib.rs  name.rs
src/dsn/: convert.rs  design_to_pcb.rs  lexer.rs  mod.rs  parser.rs  pcb_to_session.rs  token.rs  types.rs
src/model/: arc.rs  circle.rs  geom.rs  mod.rs  path.rs  pcb.rs  polygon.rs  pt.rs  rt.rs  sz.rs  tf.rs  transform.rs
src/model/geom/: bounds.rs  contains.rs  convex.rs  distance.rs  intersects.rs  math.rs  mod.rs  quadtree.rs
src/model/geom/qt/: mod.rs  quadtree.rs  query.rs
src/model/primitive/: arc.rs  capsule.rs  circle.rs  compound.rs  line_shape.rs  mod.rs  path.rs  path_shape.rs  point.rs  polygon.rs  rect.rs  rt.rs  segment.rs  shape.rs  tri.rs  triangle.rs
src/model/shape/: circle.rs  mod.rs  path.rs  polygon.rs  rt.rs  shape_type.rs
src/route/: grid.rs  grid_model.rs  mod.rs  place_model.rs  router.rs
tests/: basic.rs
