[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
categories = ["algorithms"]
description = "pcb autorouter library"
edition = "2021"
keywords = ["autoroute", "pcb", "autorouter", "dsn"]
license = "MIT OR Apache-2.0"
name = "memeroute"
repository = "https://github.com/Edgeworth/memeroute"
version = "0.1.0"

[workspace]
members = ["memeroute-gui"]

[dependencies]
auto_ops = "0.3.0"
derive_more = "0.99.17"
enumset = "1.0.12"
eyre = "0.6.8"
itertools = "0.10.5"
memedsn = {version = "0.1.0", git = "https://github.com/Edgeworth/memedsn"}
memega = {version = "0.1.0", git = "https://github.com/Edgeworth/memega"}
memegeom = {version = "0.1.0", git = "https://github.com/Edgeworth/memegeom"}
ordered-float = "3.7.0"
priority-queue = "1.3.1"
rand = {version = "0.8.5", features = ["small_rng"]}
rust-dense-bitset = "0.1.1"
serde = {version = "1.0.160", features = ["derive"]}
strum = {version = "0.24.1", features = ["derive"]}
