[package]
authors = ["Eliot Courtney <edgeworth.dev@gmail.com>"]
description = "pcb autorouter"
edition = "2024"
keywords = ["autoroute", "pcb", "autorouter", "dsn"]
license = "MIT OR Apache-2.0"
name = "memeroute-gui"
repository = "https://github.com/Edgeworth/memeroute"
version = "0.1.0"

[dependencies]
clap = {version = "4.5.47", features = ["derive", "unicode", "wrap_help"]}
color-eyre = "0.6.5"
eframe = {version = "0.32.2", features = ["persistence", "default_fonts"]}
eyre = "0.6.12"
log = "0.4.28"
memedsn = {version = "0.1.0", git = "https://github.com/Edgeworth/memedsn"}
memegeom = {version = "0.1.0", git = "https://github.com/Edgeworth/memegeom"}
memeroute = {version = "0.1.0", path = ".."}
pretty_env_logger = "0.5.0"
serde = {version = "1.0.219", features = ["derive"]}
tokio = {version = "1.47.1", features = ["full"]}
